src/test/deca/context/invalid/test_pass_3_AND_non_boolean.deca
// Description:
//     Program testing AND operator with non boolean operand
//
// Results:
//    error
//
// History:
//    Created on 13/01/2025

{
    boolean a = true && 4;
}
